--- a/APBC_tutorial_9/appsettings.json
+++ b/APBC_tutorial_9/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=localhost;Initial Catalog=tutorial9;User ID=sa;Password=password12$;Encrypt=False"
+    "DefaultConnection": "Data Source=localhost;Initial Catalog=tutorial10;User ID=sa;Password=password12@;Encrypt=False"
   },
   "AllowedHosts": "*"
 }
